# OOP_Krainova

BitString/: CMakeLists.txt
BitString/include/: BitString.h
BitString/src/: BitString.cpp
BitString/tests/: bitstring_tests.cpp
Lab4_OOP/: CMakeLists.txt  build_figures.sh
Lab4_OOP/include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  Trapeze.h
Lab4_OOP/src/: main.cpp
Lab4_OOP/tests/: figures_tests.cpp
Lab5_OOP/: CMakeLists.txt
Lab5_OOP/include/: dynamic_array.h  memory_resource.h
Lab5_OOP/src/: main.cpp
Lab5_OOP/tests/: test.cpp
Lab6_OOP/: CMakeLists.txt  main.cpp
Lab6_OOP/include/: battle_visitor.h  dungeon_editor.h  npc.h  npc_factory.h  observer.h
Lab6_OOP/src/: battle_visitor.cpp  dungeon_editor.cpp  npc.cpp  npc_factory.cpp  observer.cpp
Lab6_OOP/tests/: dungeon_tests.cpp
Lab7_OOP/: CMakeLists.txt  main.cpp
Lab7_OOP/include/: battle_logic.h  npc.h  npc_factory.h  simulation.h
Lab7_OOP/src/: battle_logic.cpp  simulation.cpp
Lab7_OOP/tests/: battle_tests.cpp
bracket_validator/: CMakeLists.txt
bracket_validator/include/: bracket_validator.h
bracket_validator/src/: CMakeLists.txt  bracket_validator.cpp  main.cpp
bracket_validator/tests/: CMakeLists.txt  test_bracket_validator.cpp
figures_project.cpp/: CMakeLists.txt
figures_project.cpp/include/: Figure.h  Rectangle.h  Rhombus.h  Trapeze.h
figures_project.cpp/src/: Rectangle.cpp  Rhombus.cpp  Trapeze.cpp  main.cpp
figures_project.cpp/tests/: test_figures.cpp
